[package]
name = "machineid-crystal"
version = "1.2.5"
edition = "2024"
authors = ["Taptiive <aalexius912@gmail.com>", "ryi3r <ryi3r@duck.com>"]
description = "Get an encrypted unique MachineID/HWID/UUID. Inspired by .Net DeviceId."
readme = "README.md"
repository = "https://github.com/Crystal-Server/machineid-crystal.git"
license = "MIT OR Apache-2.0"
keywords = ["hwid", "machineid", "hardware-id", "machineuid", "uuid"]
categories = ["authentication", "config", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { version = "0.33.1", default-features = false, features = [
    "system",
] }
whoami = "1.5.2"
serde = { version = "1.0.218", features = ["derive"] }
hex = "0.4.3"
uuid = { version = "1.13.2", features = ["v4"] }
hmac = "0.12.1"
md-5 = "0.10.6"
sha-1 = "0.10.1"
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
wmi = "0.15.0"

[target.'cfg(unix)'.dependencies]
serde_json = "1.0.139"
